src/components/projects.module.css
.projects_container {
    width: 100%;
    color: var(--color-text);
    background-color: var(--color-primary);
}

.project_card {
    display: flex;
    flex-direction: column;
    background-color: rgb(0, 0, 0);
    border-radius: 10px;
    overflow: hidden;
    margin: 0;
}

.project_title {
    padding-top: 30px;
    margin-left: 25px;
}

.projects_divider {
    width: 90%;
    border: none;
    border-top: 3px solid rgb(37, 37, 37);
    margin: 0 auto;
    background-color: black;
}

.projects_div {
    color: var(--color-text);
}

.project_items {
    display: grid;
    padding: 30px 0;
    grid-template-columns: 1fr 1fr 1fr;
    width: 95%;
    margin: 0 auto;
    gap: 10px;
    background-color: var(--color-primary);
}

.projects_item {
    width: 100%;
    height: 150px;
    border-radius: 10px;
}

.popcorn_butter {
    /* background-image: url("../assets/devPulse.jpg"); */
    background-position: center;
    background-size: cover;
    grid-area: popcorn_butter;
}

.dev_pulse {
    /* background-image: url("../assets/figma_img.jpg"); */
    background-position: center;
    background-size: cover;
    grid-area: dev_pulse;
}

.whitewalls {
    /* background-image: url("../assets/react-image.jpg"); */
    background-position: center;
    background-size: cover;
    grid-area: whitewalls;
}

.des_para {
    color: var(--color-text);
}

.project_img {
    object-fit: cover;
    object-position: center;
    display: block;
    width: 100%;
    height: 250px;
    border-radius: 10px 10px 0 0;
}

.project_des {
    display: flex;
    flex-direction: column;
    padding: 15px;
    gap: 8px;
    background-color: var(--color-accent);
}

.project_div {
   display: flex;
   flex-direction: column;
   padding: 0;
   border-radius: 10px;
   overflow: hidden;
}

.des_title, 
.des_para,
.project_btn {
    font-size: 0.7rem;
    padding-left: 20px;
    color: rgb(168, 168, 168);
} 



.project_name {
    padding-left: 20px;
    padding-top: 8px;
    padding-bottom: 8px;
}


.project_btn {
    width: 100px;
    margin: 30px auto;
    padding: 8px 10px;
    background-color: var(--color-accent);
    color: var(--color-text);
    border: none;
    cursor: pointer;
}

@media (max-width: 900px) {
    .projects_items {
        grid-template-columns: 1fr 1fr;
    }
}

@media (max-width: 600px) {
   .projects_container {
    display: block;
    margin: 0 auto;
    padding: 10px 0;
    color: var(--color-text);
    background-color: var(--color-primary);
}

.project_card {
   padding: 20px 0;
}

.project_title {
    padding-top: 20px;
    /* margin-left: 25px; */
    
}

.projects_divider {
    width: 90%;
    border: none;
    border-top: 3px solid rgb(37, 37, 37);
    margin: 0 auto;
    background-color: black;
}

.projects_div {
    color: var(--color-text);
   margin-left: 10px;
   margin-right: 10px;
}

.project_items {
    display: block;
    padding: 10px 0;
    width: 90%;
    margin: 0 auto;
    gap: 10px;
    background-color: var(--color-primary);
}

.projects_item {
    display: flex;
    flex-direction: column;
    border-radius: 10px;
}

.popcorn_butter {
    /* background-image: url("../assets/devPulse.jpg"); */
    background-position: center;
    background-size: cover;
    grid-area: popcorn_butter;
}

.dev_pulse {
    /* background-image: url("../assets/figma_img.jpg"); */
    background-position: center;
    background-size: cover;
    grid-area: dev_pulse;
}

.whitewalls {
    /* background-image: url("../assets/react-image.jpg"); */
    background-position: center;
    background-size: cover;
    grid-area: whitewalls;
}

.des_para {
    color: var(--color-text);
}

.project_img {
    object-fit: cover;
    object-position: center;
    display: block;
    width: 100%;
    height: 250px;
    border-radius: 10px 10px 0 0;
}

.project_des {
    display: block;
    padding: 15px 0;
    border-radius: 0 0 8px 8px;
    background-color: var(--color-accent);
}

.project_div {
   display: flex;
   flex-direction: column;
   padding: 0;
   border-radius: 10px;
   overflow: hidden;
}

.des_title, 
.des_para,
.project_btn {
    font-size: 0.7rem;
    padding-left: 20px;
    color: rgb(168, 168, 168);
} 





.project_name {
    /* padding-left: 20px; */
    padding-top: 8px;
    padding-bottom: 8px;
    font-size: 1rem;
}


.project_btn {
    display: block;
    width: 100px;
    margin: 30px auto;
    padding: 8px 10px;
    background-color: var(--color-accent);
    color: var(--color-text);
    border: none;
    cursor: pointer;
}

}

